--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "cross-env": "7.0.2",
+    "history": "5.0.0",
+    "json-server": "0.16.1",
+    "npm-run-all": "4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start-app start-api",
+    "start-app": "cross-env REACT_APP_API_BASE_URL=http://localhost:3001/ react-scripts start",
+    "start-api": "json-server --port 3001 --watch db.json --delay 0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
